...
        _buildActionButton(
          icon: Icons.swap_horiz,
          label: AppLocalizations.of(context)!.exchange,
          onTap: _navigateToExchange,
          isPortrait: isPortrait,
          constraints: constraints,
          key: Key('navigate-exchange')
        ),
      ],
    );
  }

  Widget _buildActionButton({
...
